force-app/main/default/objects/HAM_Pledge_Balance__c/HAM_Pledge_Balance__c.object-meta.xml
<CustomObject>
    <label>Giving Summary</label>
    <nameField>
        <label>Pledge Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Giving Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>