force-app/main/default/objects/HAM_Pledge_Balance__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Pledge_Balances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>