force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Designation__c</fullName>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>