force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Endowed_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Endowed_Fund_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This is a CRMA populated field to store the Designation &gt; Record type - Fund&gt; HAM_Endowment_Book_Value_Date__c value for the record</description>
    <inlineHelpText>This is a CRMA populated field to store the Designation &gt; Record type - Fund&gt; HAM_Endowment_Book_Value_Date__c value for the record. This will be shown in Portal and Jedi with the line&quot; As of {Date}&quot;</inlineHelpText>
    <label>HAM Endowed Fund Date</label>
    <type>Date</type>
</CustomField>