force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_External_System_ID__c</fullName>
    <label>External System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>