force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>HAM_Fiscal_Year__c</fullName>
    <description>This field is used for storing the Fiscal years for the giving over last 5 years detail table in the portal</description>
    <inlineHelpText>This field is used for storing the Fiscal years for the giving over last 5 years detail table in the portal</inlineHelpText>
    <label>Fiscal Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>