force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Paid__c.field-meta.xml
<CustomField>
    <fullName>HAM_Paid__c</fullName>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>