force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Pledge_Balance__c.field-meta.xml
<CustomField>
    <fullName>HAM_Pledge_Balance__c</fullName>
    <label>Pledge Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>