force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Pledged__c.field-meta.xml
<CustomField>
    <fullName>HAM_Pledged__c</fullName>
    <label>Pledged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>