force-app/main/default/objects/HAM_Pledge_Balance__c/fields/HAM_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>