force-app/main/default/objects/HAM_Pledge_Balance__c/recordTypes/Campaign.recordType-meta.xml
<RecordType>
    <fullName>Campaign</fullName>
    <active>true</active>
    <description>This record type must be used to store the date related to the campaign tables for portal and Jedi</description>
    <label>Campaign</label>
</RecordType>