force-app/main/default/objects/HAM_Pledge_Balance__c/recordTypes/Endowed_Funds.recordType-meta.xml
<RecordType>
    <fullName>Endowed_Funds</fullName>
    <active>true</active>
    <description>This record type must be used to store the date related to the Endowed Funds tables for portal and Jedi</description>
    <label>Endowed Funds</label>
</RecordType>