force-app/main/default/objects/HAM_Pledge_Balance__c/recordTypes/Giving_By_Purpose.recordType-meta.xml
<RecordType>
    <fullName>Giving_By_Purpose</fullName>
    <active>true</active>
    <description>This record type must be used to store the date related to the Giving by Purpose - lifetime tables for portal and Jedi</description>
    <label>Giving By Purpose</label>
</RecordType>