force-app/main/default/objects/HAM_Pledge_Balance__c/recordTypes/Last_5_year_Giving.recordType-meta.xml
<RecordType>
    <fullName>Last_5_year_Giving</fullName>
    <active>true</active>
    <description>This record type must be used to store the date related to the last 5 year giving details (Grouped by fiscal year) tables for portal and Jedi</description>
    <label>Last 5 year Giving</label>
</RecordType>