force-app/main/default/objects/HAM_Pledge_Balance__c/recordTypes/Open_Pledge.recordType-meta.xml
<RecordType>
    <fullName>Open_Pledge</fullName>
    <active>true</active>
    <description>This record type must be used to store the date related to the Open pledge tables for portal and Jedi</description>
    <label>Open Pledge</label>
</RecordType>